Russian translation update

--- a/chrome/locale/ru/cardbook.properties
+++ b/chrome/locale/ru/cardbook.properties
@@ -224,11 +224,11 @@ cardbook.addTo.name=Добавить из поля «Кому» в CardBook
 cardbook.addCc.name=Добавить из поля «Копия» в CardBook
 cardbook.addBcc.name=Добавить из поля «Скрытая копия» в CardBook
 cardbook.addAll.name=Добавить из полей «От», «Кому», «Копия» или «Скрытая копия» в CardBook
-cardbook.removeFrom.name=??Remove From from CardBook??
-cardbook.removeTo.name=??Remove To from CardBook??
-cardbook.removeCc.name=??Remove Cc from CardBook??
-cardbook.removeBcc.name=??Remove Bcc from CardBook??
-cardbook.removeAll.name=??Remove From, To, Cc or Bcc from CardBook??
+cardbook.removeFrom.name=Удалить из поля «От» в CardBook
+cardbook.removeTo.name=Удалить из поля «Кому» в CardBook
+cardbook.removeCc.name=Удалить из поля «Копия» в CardBook
+cardbook.removeBcc.name=Удалить из поля «Скрытая копия» в CardBook
+cardbook.removeAll.name=Удалить из полей «От», «Кому», «Копия» или «Скрытая копия» в CardBook
 
 urlDownloaded=URL загружен : %S
 
