--- a/chrome/locale/cs/cardbook.properties
+++ b/chrome/locale/cs/cardbook.properties
@@ -221,14 +221,14 @@ cardbook.searchBcc.name=CardBook bcc
 cardbook.searchAll.name=CardBook od, komu, cc, nebo bcc
 cardbook.addFrom.name=Přidat od do CardBooku
 cardbook.addTo.name=Přidat komu do CardBooku
-cardbook.addCc.name=Přidat cc do CardBooku
-cardbook.addBcc.name=Přidat bcc do CardBooku
-cardbook.addAll.name=Přidat od, komu, cc nebo bcc do CardBooku
-cardbook.removeFrom.name=??Remove From from CardBook??
-cardbook.removeTo.name=??Remove To from CardBook??
-cardbook.removeCc.name=??Remove Cc from CardBook??
-cardbook.removeBcc.name=??Remove Bcc from CardBook??
-cardbook.removeAll.name=??Remove From, To, Cc or Bcc from CardBook??
+cardbook.addCc.name=Přidat kopii (CC) do CardBooku
+cardbook.addBcc.name=Přidat skrytou kopii (BCC) do CardBooku
+cardbook.addAll.name=Přidat od, komu, kopii nebo skrytou kopii do CardBooku
+cardbook.removeFrom.name=Odstranit od z CardBooku
+cardbook.removeTo.name=Odstranit komu z CardBooku
+cardbook.removeCc.name=Odstranit kopii (CC) z CardBooku
+cardbook.removeBcc.name=Odstranit skrytou kopii (BCC) z CardBooku
+cardbook.removeAll.name=Odstranit od, komu, kopii nebo skrytou kopii z CardBooku
 
 urlDownloaded=URL stažena : %S
 
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Kalendář %S není zapisovatelný (možná je pouze 
 
 errorAttachingFile=Attaching vCard : Nelze vytvořit soubor pro přiložení vCard k mailu : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filters : addEmails : %1$S akce, adresář není povolen : %2$S
-errorFiltersMatchEmailsABDisabled=Filters : matchEmails, adresář není povolen : %S
+errorFiltersRemoveEmailsABDisabled=Filters : removeEmails : %1$S akce, adresář není povolen : %2$S
+errorFiltersMatchEmailsABDisabled=Filters : matchEmails : adresář není povolen : %S
 errorInfiniteLoopRecursion=Seznamy : nekonečná rekurzivní smyčka v seznamech : %S
 WRONG_VERSION=Jsou podporovány pouze vCard verze 3.0 nebo 4.0
 unableToParseResponse=%1$S : Díky následujícímu řádku se nepodařilo zpracovat odpověď serveru : %2$S
