--- a/chrome/locale/en-US/cardbook.properties
+++ b/chrome/locale/en-US/cardbook.properties
@@ -306,7 +306,7 @@ calendarNotWritableMessage=Calendar %S is not writable (maybe read-only or offli
 errorAttachingFile=Attaching vCard : Can not generate the file for attaching the vCard to the mail : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filters : addEmails : %1$S action, %2$S : Address book disabled
 errorFiltersRemoveEmailsABDisabled=Filters : removeEmails : %1$S action, %2$S : Address book disabled
-errorFiltersMatchEmailsABDisabled=Filters : matchEmails, %1$S : Address book disabled
+errorFiltersMatchEmailsABDisabled=Filters : matchEmails : %1$S : Address book disabled
 errorInfiniteLoopRecursion=Lists : infinite loop recursion for lists : %S
 WRONG_VERSION=Only vCards version 3.0 or 4.0 supported
 unableToParseResponse=%1$S : Impossible to parse the server response because of this line : %2$S
