--- a/chrome/locale/es-ES/cardbook.properties
+++ b/chrome/locale/es-ES/cardbook.properties
@@ -219,11 +219,11 @@ cardbook.searchTo.name=CardBook Para
 cardbook.searchCc.name=CardBook Cc
 cardbook.searchBcc.name=CardBook Bcc
 cardbook.searchAll.name=CardBook De, Para, Cc o Bcc a
-cardbook.addFrom.name=Añadir De a CardBook
-cardbook.addTo.name=Añadir Para a CardBook
-cardbook.addCc.name=Añadir Cc a CardBook
-cardbook.addBcc.name=Añadir Bcc a CardBook
-cardbook.addAll.name=Añadir De, Para, Cc o Bcc a CardBook
+cardbook.addFrom.name=Añadir "De" a CardBook
+cardbook.addTo.name=Añadir "Para" a CardBook
+cardbook.addCc.name=Añadir "Cc" a CardBook
+cardbook.addBcc.name=Añadir "Bcc" a CardBook
+cardbook.addAll.name=Añadir "De, Para, Cc o Bcc" a CardBook
 cardbook.removeFrom.name=Eliminar "De" de CardBook
 cardbook.removeTo.name=Eliminar "Para" de CardBook
 cardbook.removeCc.name=Eliminar "Cc" de CardBook
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Calendario %S no se puede modificar (puede estar en m
 
 errorAttachingFile=Adjuntar vCard: No se puede generar el archivo para adjuntar la vCard al correo electrónico: %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filtros: addEmails: acción %1$S, directorio desactivado: %2$S
-errorFiltersMatchEmailsABDisabled=Filtros: matchEmails, directorio desactivado: %S
+errorFiltersRemoveEmailsABDisabled=Filtros: removeEmails: acción %1$S, directorio desactivado: %2$S
+errorFiltersMatchEmailsABDisabled=Filtros: matchEmails: directorio desactivado: %S
 errorInfiniteLoopRecursion=Listas: la lista tiene una recursión infínita: %S
 WRONG_VERSION=3.0 y 4.0 son las únicas versiones soportadas
 unableToParseResponse=%1$S: No se puede analizar la respuesta del servidor en razón de la línea siguiente: %2$S
