--- a/chrome/locale/fr/cardbook.properties
+++ b/chrome/locale/fr/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=BirthdayReminder - Sync avec Lightning annulée
 calendarNotWritableMessage=Calendrier %S n'est pas modifiable (peut être en lecture seule ou inaccessible?). Synchronisation avec Lightning annulée.
 
 errorAttachingFile=Attaching vCard : Impossible de générer le fichier pour joindre la vCard au mail : %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=Filters : addEmails : %1$S action, carnet d'adresses désactivé : %2$S
-errorFiltersMatchEmailsABDisabled=Filters : matchEmails, carnet d'adresses désactivé : %S
+errorFiltersAddEmailsABDisabled=Filtres : addEmails : %1$S action, carnet d'adresses désactivé : %2$S
+errorFiltersRemoveEmailsABDisabled=Filtres : removeEmails : %1$S action, carnet d'adresses désactivé : %2$S
+errorFiltersMatchEmailsABDisabled=Filtres : matchEmails : carnet d'adresses désactivé : %S
 errorInfiniteLoopRecursion=Lists : liste ayant une recursion infinie : %S
 WRONG_VERSION=3.0 et 4.0 sont les seules versions supportées
 unableToParseResponse=%1$S : Impossible d'analyser la réponse du serveur à cause de cette ligne : %2$S
