--- a/chrome/locale/hr/cardbook.properties
+++ b/chrome/locale/hr/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Kalendar %S nije moguće pisati (možda samo za čita
 
 errorAttachingFile=Priključivanje vCard: Nije moguće generirati datoteku za spajanje vCard na poštu : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filteri : addEmails : %1$S akcija, adresar nije omogućen : %2$S
-errorFiltersMatchEmailsABDisabled=Filteri : matchEmails, adresar nije omogućen : %S
+errorFiltersRemoveEmailsABDisabled=Filteri : removeEmails : %1$S akcija, adresar nije omogućen : %2$S
+errorFiltersMatchEmailsABDisabled=Filteri : matchEmails : adresar nije omogućen : %S
 errorInfiniteLoopRecursion=Popise : rekonstrukcija beskonačne petlje za popise : %S
 WRONG_VERSION=Podržane su samo vCards inačice 3.0 ili 4.0
 unableToParseResponse=%1$S : Nemoguće je analizirati odgovor poslužitelja zbog ove linije : %2$S
