--- a/chrome/locale/hu/cardbook.properties
+++ b/chrome/locale/hu/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Naptári %S nem írható (talán csak olvasható, vag
 
 errorAttachingFile=vCard csatolása : Nem lehet létrehozni a vCard fájl, és sikertelen az üzenet melléklet : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Szűrők : addEmails : %1$S feldolgozás, névjegytár nem engedélyezett : %2$S
-errorFiltersMatchEmailsABDisabled=Szűrők : matchEmails, névjegytár nem engedélyezett : %S
+errorFiltersRemoveEmailsABDisabled=Szűrők : removeEmails : %1$S feldolgozás, névjegytár nem engedélyezett : %2$S
+errorFiltersMatchEmailsABDisabled=Szűrők : matchEmails : névjegytár nem engedélyezett : %S
 errorInfiniteLoopRecursion=Listák: végtelen ciklusba rekurzív listák : %S
 WRONG_VERSION=Csak vCard 3.0 vagy 4.0 támogatott
 unableToParseResponse=%1$S : Lehetetlen elemezni a szerver válaszát, ez a sor miatt : %2$S
