--- a/chrome/locale/it/cardbook.properties
+++ b/chrome/locale/it/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=Promemoria di compleanno - Sincronizzazione con Lightni
 calendarNotWritableMessage=Calendario %S non scrivibile (Forse è in modalità sola lettura oppure offline?). Sincronizzazione con Lightning interrotta.
 
 errorAttachingFile=Allegando la vCard: NON è possibile generare il file per allegare la vCard all'email: %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=Filtri: aggiungiEmail : %1$S azione, rubrica non abilitata: %2$S
-errorFiltersMatchEmailsABDisabled=Filtri: accoppiaEmail, rubrica non abilitata: %S
+errorFiltersAddEmailsABDisabled=Filtri: addEmails: %1$S azione, rubrica non abilitata: %2$S
+errorFiltersRemoveEmailsABDisabled=Filter: removeEmails: %1$S azione, rubrica non abilitata: %2$S
+errorFiltersMatchEmailsABDisabled=Filtri: matchEmails: rubrica non abilitata: %S
 errorInfiniteLoopRecursion=Liste: infinite loop recursion for lists : %S
 WRONG_VERSION=Solo le vCards versione 3.0 oppure 4.0 sono supportate
 unableToParseResponse=%1$S : Impossibile analizzare la risposta del server a causa di questa riga: %2$S
