--- a/chrome/locale/lt/cardbook.properties
+++ b/chrome/locale/lt/cardbook.properties
@@ -305,6 +305,7 @@ calendarNotWritableMessage=Kalendoriaus %S negalima įrašyti (galbūt tik skait
 
 errorAttachingFile=vCard pridėjimas : Nepavyko sukurti failo vCard prisegti prie pašto : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filtrai : addEmails: %1$S veiksmas, adresų knyga neįjungta : %2$S
+errorFiltersRemoveEmailsABDisabled=Filtrai : removeEmails : %1$S veiksmas, adresų knyga neįjungta : %2$S
 errorFiltersMatchEmailsABDisabled=Filtrai : matchEmails : adresų knyga neįjungta : %S
 errorInfiniteLoopRecursion=Sąrašai : begalinio ciklo rekursija sąrašams : %S
 WRONG_VERSION=Palaikomos tik „vCard 3.0“ arba „ vCard 4.0“ versijos
