--- a/chrome/locale/pl/cardbook.properties
+++ b/chrome/locale/pl/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Nie można zapisać w kalendarzu %S (może tylko do o
 
 errorAttachingFile=Załączanie vCard: Nie można stworzyć pliku do załączenia vCard do e-maila: %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filtry : addEmails : działanie %1$S, książka adresowa niewłączona: %2$S
-errorFiltersMatchEmailsABDisabled=Filtry : matchEmails, książka adresowa niewłączona: %S
+errorFiltersRemoveEmailsABDisabled=Filtry : removeEmails : działanie %1$S, książka adresowa niewłączona: %2$S
+errorFiltersMatchEmailsABDisabled=Filtry : matchEmails : książka adresowa niewłączona: %S
 errorInfiniteLoopRecursion=Listy : nieskończona pętla rekursji dla list: %S
 WRONG_VERSION=Obsługiwane tylko wersje 3.0 lub 4.0 vCard
 unableToParseResponse=%1$S: Nie można przetworzyć odpowiedzi serwera z powodu tej linii: %2$S
