--- a/chrome/locale/ro/cardbook.properties
+++ b/chrome/locale/ro/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=Aniversarea Memento - Sincronizare cu Lightning avortat
 calendarNotWritableMessage=Calendarul %S nu poate fi scris (poate citi doar sau offline?). Sincronizare cu Lightning avortat.
 
 errorAttachingFile=Atașarea vCard : Nu se poate genera fișierul pentru atașarea vCard-ului la poştă electronică : %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=Filtre : adăugați poştă electronică : acțiune de %1$S, carte de adrese este inactivă : %2$S
-errorFiltersMatchEmailsABDisabled=Filtre : meci de poştă electronică, carte de adrese este inactivă : %S
+errorFiltersAddEmailsABDisabled=Filtre : addEmails : acțiune de %1$S, carte de adrese este inactivă : %2$S
+errorFiltersRemoveEmailsABDisabled=Filtre : removeEmails : acțiune de %1$S, carte de adrese este inactivă : %2$S
+errorFiltersMatchEmailsABDisabled=Filtre : matchEmails : carte de adrese este inactivă : %S
 errorInfiniteLoopRecursion=Liste : infinit recursion bucla pentru liste : %S
 WRONG_VERSION=Numai vCards versiunea 3,0 sau 4,0 suportate
 unableToParseResponse=%1$S : Este imposibil să analizați răspunsul serverului din cauza acestei linii : %2$S
