--- a/chrome/locale/ru/cardbook.properties
+++ b/chrome/locale/ru/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Календарь %S не доступен для з
 
 errorAttachingFile=Attaching vCard : Не удалось создать файл–визитку vCard для вложения в сообщение : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Фильтры : addEmails : %1$S action, адресная книга не подключена : %2$S
-errorFiltersMatchEmailsABDisabled=Фильтры : matchEmails, адресная книга не подключена : %S
+errorFiltersRemoveEmailsABDisabled=Фильтры : removeEmails : %1$S action, адресная книга не подключена : %2$S
+errorFiltersMatchEmailsABDisabled=Фильтры : matchEmails : адресная книга не подключена : %S
 errorInfiniteLoopRecursion=Списки : Обнаружен бесконечный цикл для для списка : %S
 WRONG_VERSION=Поддерживаются vCards только версий 3.0 или 4.0
 unableToParseResponse=%1$S : Невозможно разобрать эту строку ответа сервера : %2$S
