--- a/chrome/locale/sl/cardbook.properties
+++ b/chrome/locale/sl/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=V koledar %S ni mogoče pisati (morda je v načinu sa
 
 errorAttachingFile=Pripenjanje kartice vCard: datoteke za pripenjanje kartice k pošti ni mogoče ustvariti: %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filtri: addEmails: dejanje %1$S, imenik ni omogočen: %2$S
-errorFiltersMatchEmailsABDisabled=Filtri: matchEmails, imenik ni omogočen: %S
+errorFiltersRemoveEmailsABDisabled=Filtri: removeEmails: dejanje %1$S, imenik ni omogočen: %2$S
+errorFiltersMatchEmailsABDisabled=Filtri: matchEmails: imenik ni omogočen: %S
 errorInfiniteLoopRecursion=Seznami: neskončno ponavljanje zanke za sezname: %S
 WRONG_VERSION=Podprti sta samo različici karice vCard 3.0 in 4.0
 unableToParseResponse=%1$S: odziva strežnika ni mogoče razčleniti zaradi te vrstice: %2$S
