--- a/chrome/locale/da/cardbook.properties
+++ b/chrome/locale/da/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Kalender %S er ikke skrivbar (måske skrivebeskyttet 
 
 errorAttachingFile=Vedlægning af vCard : Kan ikke generere filen til vedlæggelse af vCard'et til e-mailen : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filtre : addEmails : %1$S handling, adressebog ikke aktiveret : %2$S
-errorFiltersMatchEmailsABDisabled=Filtre : matchEmails, adressebog ikke aktiveret : %S
+errorFiltersRemoveEmailsABDisabled=Filtre : removeEmails : %1$S handling, adressebog ikke aktiveret : %2$S
+errorFiltersMatchEmailsABDisabled=Filtre : matchEmails : adressebog ikke aktiveret : %S
 errorInfiniteLoopRecursion=Lister : uendelig løkkerekursion for lister : %S
 WRONG_VERSION=Kun vCards version 3.0 eller 4.0 understøttet
 unableToParseResponse=%1$S : Umuligt at fortolke serversvaret pga. denne linje : %2$S
