--- a/chrome/locale/id/cardbook.properties
+++ b/chrome/locale/id/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=Peringatan Ulang Tahun - Sinkronisasi dengan Lightning 
 calendarNotWritableMessage=Kalender %S tidak bisa ditulis (mungkin hanya baca saja atau offline?). Sinkronisasi dengan Lightning dibatalkan
 
 errorAttachingFile=Melampirkan vKartu : Tidak dapat membuat file untuk melampirkan vKartu ke pos : %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=Filter : tambahkan email : Tindakan %1$S, buku alamat tidak diaktifkan : %2$S
-errorFiltersMatchEmailsABDisabled=Filter : cocokkan email : buku alamat tidak diaktifkan : %S
+errorFiltersAddEmailsABDisabled=Filter : addEmails : Tindakan %1$S, buku alamat tidak diaktifkan : %2$S
+errorFiltersRemoveEmailsABDisabled=Filter : removeEmails : Tindakan %1$S, buku alamat tidak diaktifkan : %2$S
+errorFiltersMatchEmailsABDisabled=Filter : matchEmails : buku alamat tidak diaktifkan : %S
 errorInfiniteLoopRecursion=Daftar : rekursi loop terbatas untuk daftar : %S
 WRONG_VERSION=Hanya vKartu versi 3,0 atau 4,0 yang didukung
 unableToParseResponse=%1$S : Tidak mungkin untuk mengurai respon server karena baris ini : %2$S
