--- a/chrome/locale/ko/cardbook.properties
+++ b/chrome/locale/ko/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=기념일 알림 - 번개(Lightning)와의 동기화가
 calendarNotWritableMessage=『%S』캘린더에 쓸 수 없습니다 (읽기 전용 또는 오프라인입니까?)\n번개(Lightning)와의 동기화가 중단되었습니다
 
 errorAttachingFile=가상 카드 연결: 메일에 가상 카드 (vCard)를 첨부 할 파일을 생성 할 수 없습니다: %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=필터: 이메일 추가: %1$S 작업, 주소록을 사용할 수 없음: %2$S
-errorFiltersMatchEmailsABDisabled=필터: 이메일과 일치, 주소록을 사용할 수 없음: %S
+errorFiltersAddEmailsABDisabled=필터: addEmails: %1$S 작업, 주소록을 사용할 수 없음: %2$S
+errorFiltersRemoveEmailsABDisabled=필터: removeEmails: %1$S 작업, 주소록을 사용할 수 없음: %2$S
+errorFiltersMatchEmailsABDisabled=필터: matchEmails: 주소록을 사용할 수 없음: %S
 errorInfiniteLoopRecursion=목록: 목록에 대한 무한 루프 반복: %S
 WRONG_VERSION=가상 카드 버전 3점0 또는 4점0 만 지원
 unableToParseResponse=%1$S: 이 목록으로 인해 서버 응답을 분석 할 수 없습니다: %2$S
