--- a/chrome/locale/nl/cardbook.properties
+++ b/chrome/locale/nl/cardbook.properties
@@ -224,11 +224,11 @@ cardbook.addTo.name=Toevoegen contactpersoon uit Aan aan CardBook
 cardbook.addCc.name=Toevoegen contactpersoon uit Cc aan CardBook
 cardbook.addBcc.name=Toevoegen contactpersoon uit Bcc aan CardBook
 cardbook.addAll.name=Toevoegen contactpersoon uit Aan, Van, Cc of Bcc aan CardBook
-cardbook.removeFrom.name=??Remove From from CardBook??
-cardbook.removeTo.name=??Remove To from CardBook??
-cardbook.removeCc.name=??Remove Cc from CardBook??
-cardbook.removeBcc.name=??Remove Bcc from CardBook??
-cardbook.removeAll.name=??Remove From, To, Cc or Bcc from CardBook??
+cardbook.removeFrom.name=Verwijderen contactpersoon van Van uit CardBook
+cardbook.removeTo.name=Verwijderen contactpersoon van Aan uit CardBook
+cardbook.removeCc.name=Verwijderen contactpersoon van Cc uit CardBook
+cardbook.removeBcc.name=Verwijderen contactpersoon van Bcc uit CardBook
+cardbook.removeAll.name=Verwijderen contactpersoon van Aan, Van, Cc of Bcc uit CardBook
 
 urlDownloaded=URL gedownload : %S
 
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Agenda %S kan niet bewerkt worden (Readonly? Offline?
 
 errorAttachingFile=Attaching vCard : Het bestand voor de vCard kan niet gegenereerd worden : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filters : addEmails : %1$S actie, adresboek is niet geactiveerd : %2$S
-errorFiltersMatchEmailsABDisabled=Filters : matchEmails, adresboek is niet geactiveerd : %S
+errorFiltersRemoveEmailsABDisabled=Filters : removeEmails : %1$S actie, adresboek is niet geactiveerd : %2$S
+errorFiltersMatchEmailsABDisabled=Filters : matchEmails : adresboek is niet geactiveerd : %S
 errorInfiniteLoopRecursion=Lists : oneindige loop in lijsten : %S
 WRONG_VERSION=Uitsluitend vCard-versie 3.0 en 4.0 worden ondersteund
 unableToParseResponse=%1$S : Antwoord van de server kan niet geanalyseerd worden, vanwege : %2$S
