--- a/chrome/locale/pt-PT/cardbook.properties
+++ b/chrome/locale/pt-PT/cardbook.properties
@@ -305,7 +305,8 @@ calendarNotWritableMessage=Calendário %S não tem permissões de escrita. Sincr
 
 errorAttachingFile=Attaching vCard : Não pode criar o ficheiro com o vCard adicionado ao email : %1$S (%2$S)
 errorFiltersAddEmailsABDisabled=Filters : addEmails : %1$S acção, agenda não disponível : %2$S
-errorFiltersMatchEmailsABDisabled=Filters : matchEmails, agenda não activada : %S
+errorFiltersRemoveEmailsABDisabled=Filters : removeEmails : %1$S acção, agenda não disponível : %2$S
+errorFiltersMatchEmailsABDisabled=Filters : matchEmails : agenda não activada : %S
 errorInfiniteLoopRecursion=Listas : loop infinito para listas : %S
 WRONG_VERSION=Apenas vCards com a versãp 3.0 ou 4.0 são suportados
 unableToParseResponse=%1$S : Impossível analisar a resposta do servidor devido a esta linha : %2$S
