--- a/chrome/locale/sv-SE/cardbook.properties
+++ b/chrome/locale/sv-SE/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=Årsdag påminnelse - Synkronisering med Lightning avbr
 calendarNotWritableMessage=Kalender %S är inte skrivbar (kanske läs bara eller offline?). Synkronisering med Lightning avbröts.
 
 errorAttachingFile=Bifoga vCard : Kan inte generera filen för att fästa vCard till posten : %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=Filter : lägg till e-postmeddelanden : %1$S handling, adressboken är inte aktiverad : %2$S
-errorFiltersMatchEmailsABDisabled=Filter : matcha e-postmeddelanden, adressboken är inte aktiverad : %S
+errorFiltersAddEmailsABDisabled=Filter : addEmails : %1$S handling, adressboken är inte aktiverad : %2$S
+errorFiltersRemoveEmailsABDisabled=Filter : removeEmails : %1$S handling, adressboken är inte aktiverad : %2$S
+errorFiltersMatchEmailsABDisabled=Filter : matchEmails : adressboken är inte aktiverad : %S
 errorInfiniteLoopRecursion=Listor : oändlig loop recursion för listor : %S
 WRONG_VERSION=Endast vCards version 3,0 eller 4,0 stöds
 unableToParseResponse=%1$S : Omöjligt att analysera serverns svar på grund av den här raden : %2$S
