--- a/chrome/locale/vi/cardbook.properties
+++ b/chrome/locale/vi/cardbook.properties
@@ -304,8 +304,9 @@ calendarNotWritableTitle=Nhắc nhở Ngày kỷ niệm - Đồng bộ với Lig
 calendarNotWritableMessage=Lịch %S không ghi được (có thể chỉ đọc hoặc ngoại tuyến?). Đồng bộ với Lightning bị hủy.
 
 errorAttachingFile=Gắn Thẻ Ảo : Không thể tạo tệp để gắn Thẻ Ảo vào thư : %1$S (%2$S)
-errorFiltersAddEmailsABDisabled=Thanh Lọc : thêm Email : hành động %1$S, sổ địa chỉ chưa được bật : %2$S
-errorFiltersMatchEmailsABDisabled=Thanh Lọc : khớp Email : sổ địa chỉ chưa được bật : %S
+errorFiltersAddEmailsABDisabled=Thanh Lọc : addEmails : hành động %1$S, sổ địa chỉ chưa được bật : %2$S
+errorFiltersRemoveEmailsABDisabled=Thanh Lọc : removeEmails : hành động %1$S, sổ địa chỉ chưa được bật : %2$S
+errorFiltersMatchEmailsABDisabled=Thanh Lọc : matchEmails : sổ địa chỉ chưa được bật : %S
 errorInfiniteLoopRecursion=Danh sách : lặp lại vòng lặp vô hạn cho các danh sách : %S
 WRONG_VERSION=Chỉ hỗ trợ Thẻ Ảo phiên bản 3,0 hoặc 4,0
 unableToParseResponse=%1$S : Không thể phân tích phản hồi máy chủ vì dòng này : %2$S
