--- a/chrome/locale/el/cardbook.properties
+++ b/chrome/locale/el/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Κατηγορία
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Ορισμός περιορισμοί λογαριασμός αλληλογραφίας
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Ορισμός λογαριασμού εξερχόμενων μηνυμάτων ηλεκτρονικού ταχυδρομείου
 
-ignoreCaseLabel=Αγνοήστε την υπόθεση
-matchCaseLabel=Ταιριάξτε την υπόθεση
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Προβολή όλων
 onlyCategories=Μόνο κατηγορίες
