--- a/chrome/locale/fr/cardbook.properties
+++ b/chrome/locale/fr/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Catégorie
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Définition d'une restriction sur un compte courrier
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Définition d'une collecte d'emails sortants sur un compte courrier
 
-ignoreCaseLabel=ignore la casse
-matchCaseLabel=respecte la casse
+ignoreCaseIgnoreDiacriticLabel=Ignore la casse et les diacritiques
+ignoreCaseMatchDiacriticLabel=Ignore la casse, respecte les diacritiques
+matchCaseIgnoreDiacriticLabel=Respecte la casse, ignore les diacritiques
+matchCaseMatchDiacriticLabel=Respecte la casse et les diacritiques
 
 allCategories=Voir tout
 onlyCategories=Seulement les catégories
