--- a/chrome/locale/hu/cardbook.properties
+++ b/chrome/locale/hu/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategória
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Postafiók korlátozások meghatározása
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Postafiók kimenő üzenetek gyűjtemény meghatározása
 
-ignoreCaseLabel=Kis- és nagybetűk
-matchCaseLabel=Mérkőzés esetén
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Mutasd az összeset
 onlyCategories=Csak kategóriák
