--- a/chrome/locale/ko/cardbook.properties
+++ b/chrome/locale/ko/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=카테고리
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=메일 계정 제한 정의
 wdw_cardbookConfigurationAddEmailsCollectionTitle=메일 계정 보내는 전자 메일 컬렉션 정의
 
-ignoreCaseLabel=대문자/소문자 무시하십시오 구분
-matchCaseLabel=대문자/소문자 구분
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=모두 보이기
 onlyCategories=카테고리만
