--- a/chrome/locale/cs/cardbook.properties
+++ b/chrome/locale/cs/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategorie
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definice omezení e-mailového účtu
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definice kolekce odchozích e-mailů e-mailového účtu
 
-ignoreCaseLabel=Nerozlišovat velikost písmen
-matchCaseLabel=Zohlednit velikost písmen
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Zobrazit vše
 onlyCategories=Pouze kategorie
