--- a/chrome/locale/da/cardbook.properties
+++ b/chrome/locale/da/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategori
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definition af begrænsning for mailkonto
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definition af indsamling af udgående e-mails for mailkonto
 
-ignoreCaseLabel=Ignorer store/små bogstaver
-matchCaseLabel=Match store/små bogstaver
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Vis alle
 onlyCategories=Kun kategorier
