--- a/chrome/locale/de/cardbook.properties
+++ b/chrome/locale/de/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategorie
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Beschränkungen festlegen
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Sammlung ausgehender Adressen festlegen
 
-ignoreCaseLabel=Groß-/Kleinschreibung ignorieren
-matchCaseLabel=Groß-/Kleinschreibung berücksichtigen
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Alle anzeigen
 onlyCategories=Nur Kategorien
