--- a/chrome/locale/en-US/cardbook.properties
+++ b/chrome/locale/en-US/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Category
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Mail Account Restriction Definition
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Mail Account Outgoing Emails Collection Definition
 
-ignoreCaseLabel=Ignore the case
-matchCaseLabel=Match the case
+ignoreCaseIgnoreDiacriticLabel=Ignore both case and diacritic
+ignoreCaseMatchDiacriticLabel=Ignore case, match diacritic
+matchCaseIgnoreDiacriticLabel=Match case, ignore diacritic
+matchCaseMatchDiacriticLabel=Match both case and diacritic
 
 allCategories=Show All
 onlyCategories=Only Categories
