--- a/chrome/locale/es-ES/cardbook.properties
+++ b/chrome/locale/es-ES/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Categoría
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definición de una restricción sobre una cuenta de correo
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definición de una colecta de correos electrónicos salientes sobre una cuenta de correo
 
-ignoreCaseLabel=insensible a mayúsculas y minúsculas
-matchCaseLabel=sensible a mayúsculas y minúsculas
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Ver todo
 onlyCategories=Solamente las categorías
