--- a/chrome/locale/hr/cardbook.properties
+++ b/chrome/locale/hr/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategorija
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definicija ograničenja računa za poštu
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definicija zbirke pošte za odlazne poruke e-pošte
 
-ignoreCaseLabel=Zanemariti slučaj
-matchCaseLabel=Kutija šibica
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Pokaži sve
 onlyCategories=Samo kategorije
