--- a/chrome/locale/id/cardbook.properties
+++ b/chrome/locale/id/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategori
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definisi Pembatasan Akun
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definisi Pengumpulan Email Alamat Terkumpul Akun
 
-ignoreCaseLabel=Abaikan BESAR/kecil
-matchCaseLabel=Cocokkan BESAR/kecil
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Tunjukkan Semua
 onlyCategories=Hanya Kategori
