--- a/chrome/locale/it/cardbook.properties
+++ b/chrome/locale/it/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Categoria
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definizione restrizioni di indirizzo postale
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Indirizzo postale in partenza Emails collezione definizione
 
-ignoreCaseLabel=Ignora maiuscole/minuscole
-matchCaseLabel=Rispetta maiuscole/minuscole
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Mostra tutto
 onlyCategories=Solo categorie
