--- a/chrome/locale/ja/cardbook.properties
+++ b/chrome/locale/ja/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=カテゴリー
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=メールアカウントの制限の定義
 wdw_cardbookConfigurationAddEmailsCollectionTitle=メールアカウント送信メールコレクションの定義
 
-ignoreCaseLabel=文字の大文字小文字を無視する
-matchCaseLabel=大文字と小文字を合わせる
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=すべて表示する
 onlyCategories=カテゴリのみ
