--- a/chrome/locale/lt/cardbook.properties
+++ b/chrome/locale/lt/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategorija
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Pranešimų paskyros apribojimo apibrėžimas
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Pranešimų paskyros išsiunčiamų laiškų rinkimo apibrėžimas
 
-ignoreCaseLabel=Ignoruoti registrą
-matchCaseLabel=Pritaikyti registrą
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Rodyti viską
 onlyCategories=Tik kategorijas
