--- a/chrome/locale/nl/cardbook.properties
+++ b/chrome/locale/nl/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Categorie
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definitie van beperkingen
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Account voor de verzameling van uitgaande berichten
 
-ignoreCaseLabel=Hoofdletter-ongevoelig
-matchCaseLabel=Hoofdletter-gevoelig
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Toon alle
 onlyCategories=Alleen categorieën
