--- a/chrome/locale/pl/cardbook.properties
+++ b/chrome/locale/pl/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategoria
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Zdefiniuj ograniczenie konta pocztowego
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Zdefiniuj zbieranie adresów z poczty wychodzącej
 
-ignoreCaseLabel=Ignoruj wielkość liter
-matchCaseLabel=Rozróżniaj wielkość liter
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Pokaż wszystkie
 onlyCategories=Tylko kategorie
