--- a/chrome/locale/pt-PT/cardbook.properties
+++ b/chrome/locale/pt-PT/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Categoria
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definições das restrições da conta de email
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definições de colecção de email enviados
 
-ignoreCaseLabel=Ignorar a etiqueta
-matchCaseLabel=Coincidir etiqueta
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Mostrar tudo
 onlyCategories=Só categorias
