--- a/chrome/locale/ro/cardbook.properties
+++ b/chrome/locale/ro/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Categorie
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definirea restricției contului poștal
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definirea colecției de poştă electronică uri de ieșire
 
-ignoreCaseLabel=Ignorați cazul literelor
-matchCaseLabel=Potrivește literele mari și mici
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Arata tot
 onlyCategories=Numai categorii
