--- a/chrome/locale/ru/cardbook.properties
+++ b/chrome/locale/ru/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Категория
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Определение ограничения для учётной записи почты
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Определение правила для сохранения адресов из исходящей почты
 
-ignoreCaseLabel=Игнорировать регистр
-matchCaseLabel=Учитывать регистр
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Показать все
 onlyCategories=Только категории
