--- a/chrome/locale/sl/cardbook.properties
+++ b/chrome/locale/sl/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategorija
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Določilo omejitev poštnega računa
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Določilo zbiranja odhodne pošte poštnega računa
 
-ignoreCaseLabel=Prezri velikost črk
-matchCaseLabel=Ujemaj velikost črk
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Prikaži vse
 onlyCategories=Samo kategorije
