--- a/chrome/locale/sv-SE/cardbook.properties
+++ b/chrome/locale/sv-SE/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Kategori
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definition av postkontobegränsning
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Postkonto utgående e-post samling definition
 
-ignoreCaseLabel=Ignorera fallet
-matchCaseLabel=Matcha fallet
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Visa alla
 onlyCategories=Endast grupperna
