--- a/chrome/locale/vi/cardbook.properties
+++ b/chrome/locale/vi/cardbook.properties
@@ -416,8 +416,10 @@ AddCatLabel=Danh mục
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Định nghĩa hạn chế Tài khoản Thư
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Tài khoản Thư Định nghĩa Bộ sưu tập Thư đi
 
-ignoreCaseLabel=Bỏ qua trường hợp
-matchCaseLabel=Khớp với trường hợp
+ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
+ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
+matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
+matchCaseMatchDiacriticLabel=??Match both case and diacritic??
 
 allCategories=Hiển thị tất cả
 onlyCategories=Chỉ Danh mục
