--- a/chrome/locale/da/cardbook.properties
+++ b/chrome/locale/da/cardbook.properties
@@ -416,10 +416,10 @@ AddCatLabel=Kategori
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definition af begrænsning for mailkonto
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definition af indsamling af udgående e-mails for mailkonto
 
-ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
-ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
-matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
-matchCaseMatchDiacriticLabel=??Match both case and diacritic??
+ignoreCaseIgnoreDiacriticLabel=Ignorer både versaler og diakritisk
+ignoreCaseMatchDiacriticLabel=Ignorer versaler, match diakritisk
+matchCaseIgnoreDiacriticLabel=Match versaler, ignorer diakritisk
+matchCaseMatchDiacriticLabel=Match både versaler og diakritisk
 
 allCategories=Vis alle
 onlyCategories=Kun kategorier
