--- a/chrome/locale/hu/cardbook.properties
+++ b/chrome/locale/hu/cardbook.properties
@@ -224,11 +224,11 @@ cardbook.addTo.name=Hozzáad címzett a névjegyzékhez
 cardbook.addCc.name=Hozzáad másolat a névjegyzékhez
 cardbook.addBcc.name=Hozzáad rejtett másolat a névjegyzékhez
 cardbook.addAll.name=Hozzáad feladó, címzett, másolat vagy rejtett másolat a névjegyzékhez
-cardbook.removeFrom.name=??Remove From from CardBook??
-cardbook.removeTo.name=??Remove To from CardBook??
-cardbook.removeCc.name=??Remove Cc from CardBook??
-cardbook.removeBcc.name=??Remove Bcc from CardBook??
-cardbook.removeAll.name=??Remove From, To, Cc or Bcc from CardBook??
+cardbook.removeFrom.name=Feladó eltávolítás Névjegyzékből
+cardbook.removeTo.name=Címzett eltávolítás Névjegyzékből
+cardbook.removeCc.name=Másolat eltávolítás Névjegyzékből
+cardbook.removeBcc.name=Rejtett másolat eltávolítás Névjegyzékből
+cardbook.removeAll.name=Feladó, címzett, másolat és rejtett másolat eltávolítás Névjegyzékből
 
 urlDownloaded=Webcím letöltött : %S
 
@@ -416,10 +416,10 @@ AddCatLabel=Kategória
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Postafiók korlátozások meghatározása
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Postafiók kimenő üzenetek gyűjtemény meghatározása
 
-ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
-ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
-matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
-matchCaseMatchDiacriticLabel=??Match both case and diacritic??
+ignoreCaseIgnoreDiacriticLabel=kis- és nagybetű nem érzékeny, megkülönböztető jel nem érzékeny
+ignoreCaseMatchDiacriticLabel=kis- és nagybetű nem érzékeny, megkülönböztető jel érzékeny
+matchCaseIgnoreDiacriticLabel=kis- és nagybetű érzékeny, megkülönböztető jel nem érzékeny
+matchCaseMatchDiacriticLabel=kis- és nagybetű érzékeny, megkülönböztető jel érzékeny
 
 allCategories=Mutasd az összeset
 onlyCategories=Csak kategóriák
