--- a/chrome/locale/es-ES/cardbook.properties
+++ b/chrome/locale/es-ES/cardbook.properties
@@ -416,10 +416,10 @@ AddCatLabel=Categoría
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definición de una restricción sobre una cuenta de correo
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definición de una colecta de correos electrónicos salientes sobre una cuenta de correo
 
-ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
-ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
-matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
-matchCaseMatchDiacriticLabel=??Match both case and diacritic??
+ignoreCaseIgnoreDiacriticLabel=Ignorar los acentos y la distinción entre mayúsculas y minúsculas
+ignoreCaseMatchDiacriticLabel=Ignorar la distinción entre mayúsculas y minúsculas, tomar en cuenta los acentos
+matchCaseIgnoreDiacriticLabel=Tomar en cuenta la distinción entre mayúsculas y minúsculas, ignorar los acentos
+matchCaseMatchDiacriticLabel=Tomar en cuenta los acentos y la distinción entre mayúsculas y minúsculas
 
 allCategories=Ver todo
 onlyCategories=Solamente las categorías
