Danish translation update for 29.3

--- a/chrome/locale/da/cardbook.properties
+++ b/chrome/locale/da/cardbook.properties
@@ -224,11 +224,11 @@ cardbook.addTo.name=Tilføj Til til CardBook
 cardbook.addCc.name=Tilføj Cc til CardBook
 cardbook.addBcc.name=Tilføj Bcc til CardBook
 cardbook.addAll.name=Tilføj Fra, Til, Cc eller Bcc til CardBook
-cardbook.removeFrom.name=??Remove From from CardBook??
-cardbook.removeTo.name=??Remove To from CardBook??
-cardbook.removeCc.name=??Remove Cc from CardBook??
-cardbook.removeBcc.name=??Remove Bcc from CardBook??
-cardbook.removeAll.name=??Remove From, To, Cc or Bcc from CardBook??
+cardbook.removeFrom.name=Fjern Fra fra CardBook
+cardbook.removeTo.name=Fjern Til fra CardBook
+cardbook.removeCc.name=Fjern Cc fra CardBook
+cardbook.removeBcc.name=Fjern Bcc fra CardBook
+cardbook.removeAll.name=Fjern Fra, Til, Cc eller Bcc fra CardBook
 
 urlDownloaded=URL hentet : %S
 
