--- a/chrome/locale/cs/cardbook.properties
+++ b/chrome/locale/cs/cardbook.properties
@@ -416,10 +416,10 @@ AddCatLabel=Kategorie
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definice omezení e-mailového účtu
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definice kolekce odchozích e-mailů e-mailového účtu
 
-ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
-ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
-matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
-matchCaseMatchDiacriticLabel=??Match both case and diacritic??
+ignoreCaseIgnoreDiacriticLabel=Ignorovat velikost písmen i diakritiku
+ignoreCaseMatchDiacriticLabel=Ignorovat velikost písmen, hledat shodu v diakritice
+matchCaseIgnoreDiacriticLabel=Shoda velikosti písmen, ignorovat diakritiku
+matchCaseMatchDiacriticLabel=Shoda velikosti písmen i diakritiky
 
 allCategories=Zobrazit vše
 onlyCategories=Pouze kategorie
