--- a/chrome/locale/id/cardbook.properties
+++ b/chrome/locale/id/cardbook.properties
@@ -224,11 +224,11 @@ cardbook.addTo.name=Tambah Kepada ke Kontak
 cardbook.addCc.name=Tambah Salinan ke Kontak
 cardbook.addBcc.name=Tambah Salinan buta ke Kontak
 cardbook.addAll.name=Tambah Dari, Kepada, Salinan, Salinan buta ke Kontak
-cardbook.removeFrom.name=??Remove From from CardBook??
-cardbook.removeTo.name=??Remove To from CardBook??
-cardbook.removeCc.name=??Remove Cc from CardBook??
-cardbook.removeBcc.name=??Remove Bcc from CardBook??
-cardbook.removeAll.name=??Remove From, To, Cc or Bcc from CardBook??
+cardbook.removeFrom.name=Hapus Dari dari Kontak
+cardbook.removeTo.name=Hapus Kepada dari Kontak
+cardbook.removeCc.name=Hapus Salinan dari Kontak
+cardbook.removeBcc.name=Hapus Salinan buta dari Kontak
+cardbook.removeAll.name=Hapus Dari, Kepada, Salinan atau Salinan buta dari Kontak
 
 urlDownloaded=Alamat URL diunduh : %S
 
@@ -416,10 +416,10 @@ AddCatLabel=Kategori
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=Definisi Pembatasan Akun
 wdw_cardbookConfigurationAddEmailsCollectionTitle=Definisi Pengumpulan Email Alamat Terkumpul Akun
 
-ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
-ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
-matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
-matchCaseMatchDiacriticLabel=??Match both case and diacritic??
+ignoreCaseIgnoreDiacriticLabel=Abaikan BESAR/kecil, abaikan diakritik
+ignoreCaseMatchDiacriticLabel=Abaikan BESAR/kecil, cocok diakritik
+matchCaseIgnoreDiacriticLabel=Cocokkan BESAR/kecil, abaikan diakritik
+matchCaseMatchDiacriticLabel=Cocokkan BESAR/kecil, cocok diakritik
 
 allCategories=Tunjukkan Semua
 onlyCategories=Hanya Kategori
