--- a/chrome/locale/ja/cardbook.properties
+++ b/chrome/locale/ja/cardbook.properties
@@ -416,10 +416,10 @@ AddCatLabel=カテゴリー
 wdw_cardbookConfigurationAddEmailsRestrictionTitle=メールアカウントの制限の定義
 wdw_cardbookConfigurationAddEmailsCollectionTitle=メールアカウント送信メールコレクションの定義
 
-ignoreCaseIgnoreDiacriticLabel=??Ignore both case and diacritic??
-ignoreCaseMatchDiacriticLabel=??Ignore case, match diacritic??
-matchCaseIgnoreDiacriticLabel=??Match case, ignore diacritic??
-matchCaseMatchDiacriticLabel=??Match both case and diacritic??
+ignoreCaseIgnoreDiacriticLabel=文字の大文字小文字を無視する、発音区別符を無視する
+ignoreCaseMatchDiacriticLabel=文字の大文字小文字を無視する、発音区別符を一致させる
+matchCaseIgnoreDiacriticLabel=大文字と小文字を合わせる、発音区別符を無視する
+matchCaseMatchDiacriticLabel=大文字と小文字を合わせる、発音区別符を一致させる
 
 allCategories=すべて表示する
 onlyCategories=カテゴリのみ
